# adsRobot

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/commands/: generate-copy.md  launch-campaign.md
.codex/: config.toml
agents/: copy-director.md
campaigns/: BRIEF_TEMPLATE.md  kit_limpieza_teteros.yaml
campaigns/ejemplos/: campana_ejemplo.yaml
campaigns/limpiador_electrico_biberones/: campana.yaml
campaigns/saco_seleccion_colombia_whatsapp/: campana.yaml
campaigns/saco_seleccion_colombia_whatsapp_v2/: campana.yaml
docs/workflows/: generate-copy.md  launch-campaign.md
scripts/: run_mcp.py  validate_campaign.py
src/meta_ads_mcp/: campaign_schema.py  client.py  server.py
src/meta_ads_mcp/tools/: ad_sets.py  ads.py  campaigns.py  creatives.py  insights.py
