[project]
name = "meta-ads-mcp"
version = "0.1.0"
description = "MCP server for managing Meta Ads campaigns"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.3.0",
    "facebook-business>=21.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
meta-ads-mcp = "meta_ads_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meta_ads_mcp"]
