[project]
name = "meta-ads-mcp"
version = "0.1.0"
description = "MCP server for managing Meta Ads campaigns"
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [{ name = "adsRobot maintainers" }]
dependencies = [
    "mcp[cli]>=1.3.0",
    "facebook-business>=25.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.2",
]

[project.scripts]
meta-ads-mcp = "meta_ads_mcp.server:main"
validate-meta-campaign = "meta_ads_mcp.campaign_schema:main"

[tool.poetry]
packages = [{ include = "meta_ads_mcp", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
